...
    );
  };

  useLayoutEffect(() => {
    navigation.setOptions({
      headerStyle: { backgroundColor: theme.colors.bg, height: 120 },
      title: selectMode ? `${selectedCount} Selected` : "Manage Activities",
      headerLeft: () => null,
      headerRight: () => (
        <View style={styles.headerRight}>
          {!selectMode && (
            <IconButton
              icon="add"
...
