...
            </Text>
          </Card>
        </View>

        {/* Booking Details Section */}
        <View style={styles.section}>
          <Text style={typography.h3}>Booking Details</Text>
          <Card style={styles.sectionCard}>
            <DetailCard
              label="Date:"
              value={new Date(slotStart).toLocaleDateString("en-US", {
                weekday: "short",
                month: "short",
...
